# human-virtual-agent

./: .gitignore  README.md
pipecat-agent/: .dockerignore  .gitignore  .pccignore  CLAUDE.md  Dockerfile  README.md  api_client.py  bot.py  canvas_actions.py  config.py  env.example  pcc-deploy.toml  persona.py  pyproject.toml  scene_context.py
pipecat-agent/tests/: test_link_narration_directive.py  test_scene_context_knowledge.py  test_scene_context_s61.py
