[project]
name = "human-virtual-agent"
version = "0.1.0"
description = "Pipecat voice agent for Human Virtual avatars"
requires-python = ">=3.12"
dependencies = [
    "pipecat-ai[daily,deepgram,openai,cartesia,silero,webrtc]",
    "pipecat-ai-small-webrtc-prebuilt",
    "httpx",
    "python-dotenv",
    "loguru",
]

[tool.setuptools]
py-modules = []
packages = []
