[project]
name = "human-virtual-agent"
version = "0.2.0"
description = "Pipecat voice agent for Human Virtual avatars"
requires-python = ">=3.12"
dependencies = [
    "pipecat-ai[daily,deepgram,openai,cartesia,silero,webrtc]",
    "pipecat-ai-small-webrtc-prebuilt",
    "httpx",
    "python-dotenv",
    "loguru",
]

[tool.setuptools]
py-modules = []
packages = []

[tool.pytest.ini_options]
pythonpath = ["."]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
